<resources>
    <string name="app_name">SityResearch</string>
    <string name="title_activity_maps">Map</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_sheet">Bottom_sheet</string>
    <string name="add_an_object">Add an object</string>
    <string name="add_button">Add</string>
    <string name="description_edit_text">Description:</string>
    <string name="updating">Updating...</string>
    <string name="sync_error">Cannot sync with server</string>
    <string name="successfully_posted">Posted successfully</string>
    <string name="report">Report</string>
    <string name="address">Address:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="description">Description:</string>
    <string name="info_about_object">Info about object</string>
</resources>
