<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet_info_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/info_about_object"
        android:textAlignment="center"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16pt"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/image_of_object_info"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_margin="10dp"
            android:src="@drawable/empty_image" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/address_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/address"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/latitude_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/latitude"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/longitude_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/longitude"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/object_description_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:text="@string/description"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="20sp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/add_object"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="end"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_report_background"
        android:text="@string/report"
        android:textColor="@color/colorTextPrimary" />

</LinearLayout>