<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/add_an_object"
        android:textAlignment="center"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16pt"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/image_of_object"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_margin="10dp"
            android:src="@drawable/empty_image" />

        <ImageButton
            android:id="@+id/add_image_button"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:contentDescription="@string/add_button"
            android:src="@drawable/ic_add_circle_yellow_64dp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />


    <EditText
        android:id="@+id/object_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_edit_text"
        android:textColorHint="@color/colorTextPrimary" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/add_object"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_add_background"
        android:text="@string/add_button"
        android:textColor="@color/colorTextPrimary" />

</LinearLayout>